# RWB_ML

./: .gitignore  Dockerfile  README.md  app.py  baseline.ipynb  model.py  pyproject.toml
ML_solve/Semøn/notebooks/: baseline.ipynb  mid_sub.ipynb  my_catboost_model.cbm  resnet+catboost.ipynb  resnet_theory.ipynb  with_resnet_classes.ipynb
ML_solve/Semøn/notebooks/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
ML_solve/Semøn/notebooks/catboost_info/learn/: events.out.tfevents
ML_solve/Semøn/notebooks/catboost_info/test/: events.out.tfevents
ML_solve/Vlad/notebooks/: baseline.ipynb  baseline.py  main.ipynb  main.py
inference/: app.py  model.py  model_vlad.py
